force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account_Number__c</fullName>
    <formula>CASE(RecordType.DeveloperName
, &apos;IBInvoiceNote&apos;,     clofor_com_cfs__VatIssueFrom__r.AccountNumber 

, &apos;VendorVATInvoice&apos;,  clofor_com_cfs__VatIssueFrom__r.AccountNumber

, &apos;OBInvoiceNote&apos;,     clofor_com_cfs__VAT_INVOICE_TO__r.AccountNumber

, &apos;MULTIPLE_SHIPMENT_TO_1VAT_INVOICE_SUMMARY&apos;, clofor_com_cfs__VAT_INVOICE_TO__r.AccountNumber 

, &apos;FMSTMSWMSVATInvoice&apos;, clofor_com_cfs__VAT_INVOICE_TO__r.AccountNumber 

, &apos;CloWMSVATInvoice&apos;, clofor_com_cfs__VAT_INVOICE_TO__r.AccountNumber 
, &apos;&apos;)</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>