force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__AmountOfTaxVATSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfTaxVATSellingFCY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount of Tax-Selling(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>