force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__AmountVATBuyingIncludeVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountVATBuyingIncludeVAT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AMOUNT VAT BUYING INCLUDE TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>