force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__AmountVATSellingInclVATText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountVATSellingInclVATText__c</fullName>
    <label>Amount Selling incl Tax-Text</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>