force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__AutoConnectToTransaction__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AutoConnectToTransaction__c</fullName>
    <label>AUTO-CONNECT SOURCES TO TRANSACTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RecordCreationStatus</valueSetName>
    </valueSet>
</CustomField>