force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__CurrencyConversionforSelling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CurrencyConversionforSelling__c</fullName>
    <label>Currency Conversion for Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>