force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__CUSTOMER_PHONE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CUSTOMER_PHONE_NUMBER__c</fullName>
    <formula>clofor_com_cfs__VAT_INVOICE_TO__r.Phone</formula>
    <label>CUSTOMER PHONE NUMBER</label>
    <type>Text</type>
</CustomField>