force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>