force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate ID</label>
    <referenceTo>clofor_com_cfs__MgmtMaster__c</referenceTo>
    <relationshipLabel>VAT/INV</relationshipLabel>
    <relationshipName>VATInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>