force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__Extra__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Extra__c</fullName>
    <label>Extra</label>
    <type>TextArea</type>
</CustomField>