force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__ForeignCurrency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ForeignCurrency__c</fullName>
    <label>Foreign Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Currency</valueSetName>
    </valueSet>
</CustomField>