force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__IMPORTER_EXPORTER_CODE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IMPORTER_EXPORTER_CODE__c</fullName>
    <formula>clofor_com_cfs__VAT_INVOICE_TO__r.clofor_com_cfs__ImporterNumber__c</formula>
    <label>IMPORTER/EXPORTER CODE</label>
    <type>Text</type>
</CustomField>