force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__IssuedYear__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IssuedYear__c</fullName>
    <label>Issued Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>