force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__LOCAL_BANK_ACCOUNT_NUMBER_1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LOCAL_BANK_ACCOUNT_NUMBER_1__c</fullName>
    <defaultValue>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Account_No_1__c &amp; &quot; &quot;&amp; $Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Bank_Name_1__c</defaultValue>
    <label>LOCAL BANK ACCOUNT NUMBER 1</label>
    <type>TextArea</type>
</CustomField>