force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__LOCAL_BANK_NAME_1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LOCAL_BANK_NAME_1__c</fullName>
    <defaultValue>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Bank_Name_1__c</defaultValue>
    <label>LOCAL BANK NAME 1</label>
    <type>TextArea</type>
</CustomField>