force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__Number_of_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Number_of_Invoicing__c</fullName>
    <label>Number of Invoicing</label>
    <summaryForeignKey>clofor_com_cfs__INVOICING_VAT__c.clofor_com_cfs__VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>