force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__OutboundINVDebitNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OutboundINVDebitNumber__c</fullName>
    <formula>IF(ISBLANK( clofor_com_cfs__OutboundINVNumber__c ), clofor_com_cfs__RED_INVOICE_NO__c , clofor_com_cfs__OutboundINVNumber__c )</formula>
    <label>Outbound INV/Debit Number</label>
    <type>Text</type>
</CustomField>