force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__OutboundINVNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OutboundINVNumber__c</fullName>
    <label>Outbound INV Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>