force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__RED_INVOICE_NO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RED_INVOICE_NO__c</fullName>
    <label>RED INVOICE NO</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>