force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__REGISTRATION_NO_SERIAL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__REGISTRATION_NO_SERIAL__c</fullName>
    <label>REGISTRATION NO(SERIAL)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TD/11PD</fullName>
                <default>true</default>
                <label>TD/11PD</label>
            </value>
            <value>
                <fullName>TD/11PF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>