force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__RollupFMSAmountOfTaxSelling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSAmountOfTaxSelling__c</fullName>
    <label>ROLLUP FMS AMOUNT OF TAX-SELLING</label>
    <summarizedField>clofor_com_cfs__INVOICING_VAT__c.clofor_com_cfs__AmountOfTaxSellingLocalForVAT__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__INVOICING_VAT__c.clofor_com_cfs__VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>