force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__RollupFMSAmountOfTaxSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSAmountOfTaxSellingFCY__c</fullName>
    <label>Rollup FMS Amount of Tax-Selling(FCY)</label>
    <summarizedField>clofor_com_cfs__INVOICING_VAT__c.clofor_com_cfs__AmountOfTaxSellingFCYForVAT__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__INVOICING_VAT__c.clofor_com_cfs__VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>