force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__RollupOtherTotalRev__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupOtherTotalRev__c</fullName>
    <label>ROLLUP OTHER TOTAL REV</label>
    <summarizedField>clofor_com_cfs__OtherVAT__c.clofor_com_cfs__TotalAmountOtherRevVAT__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__OtherVAT__c.clofor_com_cfs__VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>