force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__RollupTotalAmountOfPI__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupTotalAmountOfPI__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF P/I</label>
    <summarizedField>clofor_com_cfs__PurInvVATInv__c.clofor_com_cfs__TotalAmountOfPILocalForVAT__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__PurInvVATInv__c.clofor_com_cfs__VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>