force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__RollupWMSTotalAmountOfSelling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupWMSTotalAmountOfSelling__c</fullName>
    <label>ROLLUP WMS TOTAL AMOUNT OF SELLING</label>
    <summarizedField>clofor_com_cfs__ConnectBillingVAT__c.clofor_com_cfs__TotalAmountOfSellingLocalForVAT__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectBillingVAT__c.clofor_com_cfs__VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>