force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__ShipmentOrderIdentification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShipmentOrderIdentification__c</fullName>
    <label>CloFMS S/O INDENTIFICATION</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__OrderIdentification</valueSetName>
    </valueSet>
</CustomField>