force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__ShipmentOrderIdentificationDetail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShipmentOrderIdentificationDetail__c</fullName>
    <label>CloFMS S/O INDENTIFICATION DETAIL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>