force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__TERMS_OF_PAYMENT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TERMS_OF_PAYMENT__c</fullName>
    <inlineHelpText>Choose the Payment Type which define how your client pay the invoices.</inlineHelpText>
    <label>TERMS OF PAYMENT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TERMS_OF_PAYMENT</valueSetName>
    </valueSet>
</CustomField>