force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__TRX_PLAN_LOOKUP__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TRX_PLAN_LOOKUP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRX PLAN LOOKUP</label>
    <referenceTo>clofor_com_cfs__PaymentRequest__c</referenceTo>
    <relationshipName>VAT_INV</relationshipName>
    <type>Lookup</type>
</CustomField>