force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__VAT_INVOICE_ISSUED_BY_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VAT_INVOICE_ISSUED_BY_EMAIL__c</fullName>
    <formula>clofor_com_cfs__VAT_INVOICE_ISSUED_BY__r.Email</formula>
    <label>VAT INVOICE ISSUED BY-EMAIL</label>
    <type>Text</type>
</CustomField>