force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__VAT_INVOICE_REMARKS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VAT_INVOICE_REMARKS__c</fullName>
    <label>REMARKS ON VAT INVOICE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>