force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__VAT_INVOICE_TO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VAT_INVOICE_TO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT INVOICE TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VAT_INVOICE</relationshipName>
    <type>Lookup</type>
</CustomField>