force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__VATInvoiceNoFromVendor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATInvoiceNoFromVendor__c</fullName>
    <label>VAT INVOICE NO FROM VENDOR</label>
    <type>TextArea</type>
</CustomField>