force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__VATInvoicePrintDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATInvoicePrintDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>VAT INVOICE ISSUE DATE</label>
    <type>Date</type>
</CustomField>