force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__VATInvoiceSentDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATInvoiceSentDate__c</fullName>
    <label>VAT Invoice Sent Date</label>
    <type>Date</type>
</CustomField>