force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__VatIssueFrom__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VatIssueFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT ISSUE FROM</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VatIssueFrom</relationshipName>
    <type>Lookup</type>
</CustomField>