force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/fields/clofor_com_cfs__VATPeriodUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATPeriodUnit__c</fullName>
    <inlineHelpText>Only select the picklist when the VAT Invoice issued periodically.</inlineHelpText>
    <label>VAT PERIOD UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__VATPeriod</valueSetName>
    </valueSet>
</CustomField>