force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__CloWMSVATInvoice.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CloWMSVATInvoice</fullName>
    <active>true</active>
    <description>To Issue VAT Invoice for CloWMS</description>
    <label>CloWMS VAT INVOICE</label>
</RecordType>