force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__FMSTMSWMSVATInvoice.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FMSTMSWMSVATInvoice</fullName>
    <active>true</active>
    <description>To Issue VAT Invoice for FMS/TMS and WMS together</description>
    <label>FMS/TMS+WMS VAT Invoice</label>
</RecordType>