force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__IBInvoiceNote.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__IBInvoiceNote</fullName>
    <active>true</active>
    <description>To manage Credit Note without VAT from vendor or oversea partners/agent.</description>
    <label>Inbound Invoice(Cr) Note</label>
</RecordType>