force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__MULTIPLE_SHIPMENT_TO_1VAT_INVOICE_INVOICING_LEVEL.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__MULTIPLE_SHIPMENT_TO_1VAT_INVOICE_INVOICING_LEVEL</fullName>
    <active>false</active>
    <description>Choose this record type when many shipment need to be combine into one VAT INVOICE with all Invoicing Line Detail.</description>
    <label>MULTIPLE SHIPMENT TO 1 VAT INVOICE-INVOICING LEVEL</label>
</RecordType>