force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__MULTIPLE_SHIPMENT_TO_1VAT_INVOICE_SUMMARY.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__MULTIPLE_SHIPMENT_TO_1VAT_INVOICE_SUMMARY</fullName>
    <active>true</active>
    <description>To Issue VAT Invoice for FMS/TMS</description>
    <label>MULTIPLE SHIPMENT TO 1 VAT INVOICE-SUMMARY</label>
</RecordType>