force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__OBInvoiceNote.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OBInvoiceNote</fullName>
    <active>true</active>
    <description>To Issue Debit Note without VAT to customer or oversea partner/agent.</description>
    <label>Outbound Invoice(Dr) Note</label>
</RecordType>