force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__SINGLE_SHIPMENT_TO_1_VAT_INVOICE_SUMMARY.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__SINGLE_SHIPMENT_TO_1_VAT_INVOICE_SUMMARY</fullName>
    <active>false</active>
    <description>Choose this record type when the VAT INVOICE involve with 1 shipment with Summary.</description>
    <label>SINGLE SHIPMENT TO 1 VAT INVOICE-SUMMARY</label>
</RecordType>