force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__SINGLE_SHIPMENT_TO_1VAT_INVOICE_INVOICING_LEVEL.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__SINGLE_SHIPMENT_TO_1VAT_INVOICE_INVOICING_LEVEL</fullName>
    <active>false</active>
    <description>Choose this record type when the VAT INVOICE involve with 1 shipment with Invoice Line Detail.</description>
    <label>SINGLE SHIPMENT TO 1 VAT INVOICE-INVOICING LEVEL</label>
</RecordType>