force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/recordTypes/clofor_com_cfs__VendorVATInvoice.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__VendorVATInvoice</fullName>
    <active>true</active>
    <description>To manage VAT from Vendors</description>
    <label>Vendor VAT Invoice</label>
</RecordType>