force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/listViews/clofor_com_cfs__AllVAT.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__AllVAT</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__RED_INVOICE_NO__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__VAT_INVOICE_TO__c</columns>
    <columns>clofor_com_cfs__VATInvoicePrintDate__c</columns>
    <columns>clofor_com_cfs__VAT_INVOICE_ISSUE_STATUS__c</columns>
    <columns>clofor_com_cfs__VAT_INVOICE_USAGE_STATUS__c</columns>
    <columns>clofor_com_cfs__AmountOfTaxVATBuying__c</columns>
    <columns>clofor_com_cfs__AmountOfTaxVATSelling__c</columns>
    <columns>clofor_com_cfs__VAT_INVOICE_REMARKS__c</columns>
    <columns>clofor_com_cfs__CLIENTS_NAME_IN_VAT_INVOICE__c</columns>
    <columns>clofor_com_cfs__VAT_INVOICE_ISSUED_BY__c</columns>
    <columns>clofor_com_cfs__DESCRIPTION_FOR_COMBINE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>