force-app/main/default/objects/clofor_com_cfs__VAT_INVOICE__c/listViews/clofor_com_cfs__Outbound_VAT.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Outbound_VAT</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__RED_INVOICE_NO__c</columns>
    <columns>clofor_com_cfs__Selling_Tax_Ratio__c</columns>
    <columns>clofor_com_cfs__VAT_INVOICE_TO__c</columns>
    <columns>clofor_com_cfs__TotalAmountOfVATSelling__c</columns>
    <columns>clofor_com_cfs__AmountOfTaxVATSelling__c</columns>
    <columns>clofor_com_cfs__AmountVATSellingIncludeVAT__c</columns>
    <columns>clofor_com_cfs__VATInvoicePrintDate__c</columns>
    <columns>clofor_com_cfs__VAT_INVOICE_ISSUE_STATUS__c</columns>
    <columns>clofor_com_cfs__RECEIVABLE_RECEIPTANCE_CONFIRMED__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__VAT_INVOICE__c.clofor_com_cfs__CloWMSVATInvoice,clofor_com_cfs__VAT_INVOICE__c.clofor_com_cfs__FMSTMSWMSVATInvoice,clofor_com_cfs__VAT_INVOICE__c.clofor_com_cfs__MULTIPLE_SHIPMENT_TO_1VAT_INVOICE_SUMMARY</value>
    </filters>
    <label>Outbound VAT</label>
    <language>en_US</language>
</ListView>